--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Infinity and Physics
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
+description: A blog to describe my attempts at using set theory in physics
 github_username: LuisMSPereira
 
 # Email and twitter are optional:
